create index.html file

--- a/IonIcon/ion-icons.html
+++ b/IonIcon/ion-icons.html
@@ -30,7 +30,7 @@
         </header>
         <ul>
           <li>
-            <a href="../FontAwesome/font-awesome.html">FontAwesome</a>
+            <a href="../index.html">FontAwesome</a>
           </li>
           <li>
             <a href="../MaterialDesign/material-design.html">Material Design</a>
