--- a/MaterialDesign/material-design.html
+++ b/MaterialDesign/material-design.html
@@ -33,7 +33,7 @@
         </header>
         <ul>
           <li>
-            <a href="../FontAwesome/font-awesome.html">FontAwesome</a>
+            <a href="../index.html">FontAwesome</a>
           </li>
           <li class="material__design">
             <a href="./material-design.html">Material Design</a>
