--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
       rel="stylesheet"
     />
     <!-- end -->
-    <link rel="stylesheet" href="../index.css" />
+    <link rel="stylesheet" href="./index.css" />
   </head>
   <body id="font__awesome">
     <div class="main-container">
       <div class="sidebar-container">
         <header>
-          <img src="../assets/logo/reactlogo.png" alt="" />
+          <img src="./assets/logo/reactlogo.png" alt="" />
           <span>React Icons</span>
         </header>
         <ul>
@@ -31,16 +31,16 @@
             <a href="./font-awesome.html">FontAwesome</a>
           </li>
           <li>
-            <a href="../MaterialDesign/material-design.html">Material Design</a>
+            <a href="./MaterialDesign/material-design.html">Material Design</a>
           </li>
           <li>
-            <a href="../FeatherIcons/feather-icons.html">Feather Icons</a>
+            <a href="./FeatherIcons/feather-icons.html">Feather Icons</a>
           </li>
           <li>
-            <a href="../LineaIcons/linea-basic-icons.html">Linea Basic</a>
+            <a href="./LineaIcons/linea-basic-icons.html">Linea Basic</a>
           </li>
           <li>
-            <a href="../IonIcon/ion-icons.html">Ion Icons</a>
+            <a href="./IonIcon/ion-icons.html">Ion Icons</a>
           </li>
         </ul>
       </div>
