--- a/IonIcon/ion-icons.html
+++ b/IonIcon/ion-icons.html
@@ -26,7 +26,7 @@
       <div class="sidebar-container">
         <header>
           <img src="../assets/logo/reactlogo.png" alt="" />
-          <span>React Icons</span>
+          <span>react-multiple-icons</span>
         </header>
         <ul>
           <li>
