change package name

--- a/IonIcon/ion-icons.html
+++ b/IonIcon/ion-icons.html
@@ -50,7 +50,7 @@
         <span>Ion Icons</span>
         <div class="example">
           <code>
-            <pre>import Icon from "react-icons";</pre>
+            <pre>import Icon from "react-multiple-icons";</pre>
             <pre>&ltIcon className="ion-AnyIconNameSelectedFromList"/></pre>
           </code>
         </div>
