--- a/MaterialDesign/material-design.html
+++ b/MaterialDesign/material-design.html
@@ -53,7 +53,7 @@
         <span>Material Design Icons</span>
         <div class="example">
           <code>
-            <pre>import Icon from "react-icons";</pre>
+            <pre>import Icon from "react-multiple-icons";</pre>
             <pre>
 &ltIcon iconName="material-icons" className="AnyIconNameSelectedFromList"/></pre
             >
