--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <span>FontAwesome Solid Icons</span>
         <div class="example">
           <code>
-            <pre>import Icon from "react-icons";</pre>
+            <pre>import Icon from "react-multiple-icons";</pre>
             <pre>&ltIcon className="fas fas-AnyIconNameSelectedFromList"/></pre>
           </code>
         </div>
@@ -56,7 +56,7 @@
         <span>FontAwesome Regular Icons</span>
         <div class="example">
           <code>
-            <pre>import Icon from "react-icons";</pre>
+            <pre>import Icon from "react-multiple-icons";</pre>
             <pre>&ltIcon className="far far-AnyIconNameSelectedFromList"/></pre>
           </code>
         </div>
@@ -64,7 +64,7 @@
         <span>FontAwesome Brand Icons</span>
         <div class="example">
           <code>
-            <pre>import Icon from "react-icons";</pre>
+            <pre>import Icon from "react-multiple-icons";</pre>
             <pre>&ltIcon className="fab fab-AnyIconNameSelectedFromList"/></pre>
           </code>
         </div>
