--- a/FeatherIcons/feather-icons.html
+++ b/FeatherIcons/feather-icons.html
@@ -52,7 +52,7 @@
         <span>Feather Icons</span>
         <div class="example">
           <code>
-            <pre>import Icon from "react-icons";</pre>
+            <pre>import Icon from "react-multiple-icons";</pre>
             <pre>
 &ltIcon className="feather feather-AnyIconNameSelectedFromList"/></pre
             >
