--- a/LineaIcons/linea-basic-icons.html
+++ b/LineaIcons/linea-basic-icons.html
@@ -59,7 +59,7 @@
         <span>Linea Basic Icons</span>
         <div class="example">
           <code>
-            <pre>import Icon from "react-icons";</pre>
+            <pre>import Icon from "react-multiple-icons";</pre>
             <pre>
 &ltIcon className="linea linea-basic-AnyIconNameSelectedFromList"/></pre
             >
