change default image

--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
     <div class="main-container">
       <div class="sidebar-container">
         <header class="header-container">
-          <img src="./assets/logo/reactlogo.png" alt="" />
+          <img
+            src="https://camo.githubusercontent.com/088637eeb79634aba61fa2544ec5546ff9d83cb1/68747470733a2f2f696d672e74656368706f77657275702e6f72672f3139303931382f72656163742d69636f6e2d6c6f676f2e706e67"
+            alt=""
+          />
           <span>react-multiple-icons</span>
         </header>
         <ul>
