--- a/IonIcon/ion-icons.html
+++ b/IonIcon/ion-icons.html
@@ -24,7 +24,7 @@
   <body id="ion__icons">
     <div class="main-container">
       <div class="sidebar-container">
-        <header>
+        <header class="header-container">
           <img src="../assets/logo/reactlogo.png" alt="" />
           <span>react-multiple-icons</span>
         </header>
