--- a/FeatherIcons/feather-icons.html
+++ b/FeatherIcons/feather-icons.html
@@ -26,7 +26,7 @@
   <body id="feather__icons">
     <div class="main-container">
       <div class="sidebar-container">
-        <header>
+        <header class="header-container">
           <img src="../assets/logo/reactlogo.png" alt="" />
           <span>react-multiple-icons</span>
         </header>
