--- a/LineaIcons/linea-basic-icons.html
+++ b/LineaIcons/linea-basic-icons.html
@@ -33,7 +33,7 @@
   <body id="linea__icons">
     <div class="main-container">
       <div class="sidebar-container">
-        <header>
+        <header class="header-container">
           <img src="../assets/logo/reactlogo.png" alt="" />
           <span>react-multiple-icons</span>
         </header>
