--- a/MaterialDesign/material-design.html
+++ b/MaterialDesign/material-design.html
@@ -27,7 +27,7 @@
   <body id="material__design">
     <div class="main-container">
       <div class="sidebar-container">
-        <header>
+        <header class="header-container">
           <img src="../assets/logo/reactlogo.png" alt="" />
           <span>react-multiple-icons</span>
         </header>
